Porting to 64 bit - DONE

--- a/examples/SteamWrapperTest/SteamWrapperTest.dproj
+++ b/examples/SteamWrapperTest/SteamWrapperTest.dproj
@@ -5,8 +5,8 @@
         <FrameworkType>VCL</FrameworkType>
         <MainSource>SteamWrapperTest.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
-        <Platform Condition="'$(Platform)'==''">Win32</Platform>
+        <Config Condition="'$(Config)'==''">Release</Config>
+        <Platform Condition="'$(Platform)'==''">Win64</Platform>
         <TargetedPlatforms>3</TargetedPlatforms>
         <AppType>Application</AppType>
     </PropertyGroup>
@@ -133,7 +133,6 @@
         </DelphiCompile>
         <DCCReference Include="Unit1.pas">
             <Form>Form1</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\..\includes\SteamworksClasses.pas"/>
         <DCCReference Include="..\..\includes\SteamworksTypes.pas"/>
